fix: margion on mobile devices on calendar app

--- a/src/styles/CalendarApp.module.scss
+++ b/src/styles/CalendarApp.module.scss
@@ -27,6 +27,7 @@ calendar {
     background-color:$text-white;
     border-radius: 30px;
     box-shadow: $box-shadow;
+    margin-top: 100px
 }
 
 section {
@@ -59,9 +60,16 @@ input {
 }
 
 // phones
+@media (max-width: 1700px) {
+    calendar {
+        margin-top: 30px
+    }
+}
+
+// phones
 @media (max-width: 800px) {
     calendar {
-margin-top: 90%
+        margin-top: 90%
     }
 }
 
